--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,10 @@
 name: Release
 
 on:
-  release:
-    types: [created]
+  push:
+    tags:
+      - 'v*'
+  workflow_dispatch:  # Allow manual triggering
 
 jobs:
   build-and-publish:
@@ -24,30 +26,33 @@ jobs:
     - name: Build
       run: npm run build
     
-    - name: Set version from release
+    - name: Extract version from tag
+      id: get_version
       run: |
-        RELEASE_VERSION=${GITHUB_REF#refs/tags/v}
-        npm version $RELEASE_VERSION --no-git-tag-version
-        echo "Version set to $RELEASE_VERSION"
+        VERSION=${GITHUB_REF#refs/tags/v}
+        echo "VERSION=$VERSION" >> $GITHUB_ENV
+        echo "Version extracted from tag: $VERSION"
+        
+        # Verify that the tag version matches package.json version
+        PKG_VERSION=$(node -p "require('./package.json').version")
+        if [ "$VERSION" != "$PKG_VERSION" ]; then
+          echo "::warning::Tag version ($VERSION) does not match package.json version ($PKG_VERSION)"
+        fi
     
     - name: Publish to npm
       run: npm publish --access public
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
     
-    - name: Generate release notes
-      id: release_notes
-      run: |
-        VERSION=$(node -p "require('./package.json').version")
-        echo "RELEASE_NOTES<<EOF" >> $GITHUB_ENV
-        echo "## @nitish/searxng-mcp-bridge v$VERSION" >> $GITHUB_ENV
-        echo "" >> $GITHUB_ENV
-        echo "See [CHANGELOG.md](https://github.com/nitish-raj/searxng-mcp-bridge/blob/main/CHANGELOG.md) for details." >> $GITHUB_ENV
-        echo "EOF" >> $GITHUB_ENV
-    
-    - name: Update release notes
+    - name: Create GitHub Release
       uses: softprops/action-gh-release@v1
       with:
-        body: ${{ env.RELEASE_NOTES }}
+        name: "v${{ env.VERSION }}"
+        body: |
+          ## @nitish/searxng-mcp-bridge v${{ env.VERSION }}
+          
+          See [CHANGELOG.md](https://github.com/nitish-raj/searxng-mcp-bridge/blob/main/CHANGELOG.md) for details.
+        draft: false
+        prerelease: false
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
