--- a/smithery.yaml
+++ b/smithery.yaml
@@ -1,4 +1,9 @@
 # Smithery configuration file: https://smithery.ai/docs/config#smitheryyaml
+# Smithery configuration file: https://smithery.ai/docs/config#smitheryyaml
+description: |
+  An MCP server that acts as a bridge to a SearxNG instance.
+  Allows compatible clients (like Roo) to perform searches using a configured SearxNG instance.
+  **Requires the `searxngInstanceUrl` configuration to be set.**
 
 startCommand:
   type: stdio
@@ -10,8 +15,10 @@ startCommand:
     properties:
       searxngInstanceUrl:
         type: string
-        default: http://localhost:8888
-        description: URL of the SearxNG instance.
+        # No default value - this URL is mandatory.
+        description: |
+          **Required.** The full URL of the SearxNG instance the bridge should connect to.
+          This can be a local instance (e.g., "http://localhost:8888") or a public instance (find options at https://searx.space/).
   commandFunction:
     # A JS function that produces the CLI command based on the given config to start the MCP on stdio.
     |-
@@ -23,4 +30,5 @@ startCommand:
       }
     })
   exampleConfig:
-    searxngInstanceUrl: http://localhost:8888
+    # Replace with the actual URL of your SearxNG instance
+    searxngInstanceUrl: "YOUR_SEARXNG_INSTANCE_URL"
