--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.11.24",
+    "conventional-changelog-cli": "^5.0.0",
     "typescript": "^5.3.3"
   },
   "author": "nitish-raj",
