--- a/smithery.yaml
+++ b/smithery.yaml
@@ -3,7 +3,7 @@
 description: |
   An MCP server that acts as a bridge to a SearxNG instance.
   Allows compatible clients (like Roo) to perform searches using a configured SearxNG instance.
-  **Requires the `searxngInstanceUrl` configuration to be set.**
+  Requires the `searxngInstanceUrl` configuration to be set.
 
 startCommand:
   type: stdio
@@ -17,8 +17,7 @@ startCommand:
         type: string
         # No default value - this URL is mandatory.
         description: |
-          **Required.** The full URL of the SearxNG instance the bridge should connect to.
-          This can be a local instance (e.g., "http://localhost:8888") or a public instance (find options at https://searx.space/).
+          Required: The full URL of the SearxNG instance the bridge should connect to.
   commandFunction:
     # A JS function that produces the CLI command based on the given config to start the MCP on stdio.
     |-
