--- a/.github/workflows/validate-package.yml
+++ b/.github/workflows/validate-package.yml
@@ -6,6 +6,8 @@ permissions:
 on:
   pull_request:
     branches: [ main ]
+  push:
+    branches: [ main ]
   
   workflow_dispatch:  # Allow manual triggering
 
