--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -7,7 +7,9 @@ on:
 
 jobs:
   release:
-    if: github.event.pull_request.merged == true
+    if: |
+      github.event.pull_request.merged == true && 
+      github.actor == 'renovate[bot]'
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -29,11 +31,14 @@ jobs:
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
+      - name: Install dependencies
+        run: npm ci
+
       - name: Bump version
         run: |
           npm version minor -m "chore(release): %s"
 
-      - name: Push changes
+      - name: Push new version and tag
         run: |
-          git push
-          git push --tags
+          git push origin master
+          git push origin --tags
