--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,17 +2,15 @@ name: CI
 
 on:
   push:
-    branches: [ main ]
-    tags: [ 'v*' ]
+    branches: [ master ]
   pull_request:
-    branches: [ main ]
-  workflow_dispatch:  # Allow manual triggering
+    branches: [ master ]
 
 permissions:
   contents: read
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     
     strategy:
@@ -31,7 +29,13 @@ jobs:
     - name: Install dependencies
       run: npm ci
     
-    - name: Build
+    - name: Run linting
+      run: npm run lint
+    
+    - name: Run tests
+      run: npm test
+    
+    - name: Build project
       run: npm run build
     
     - name: Upload build artifacts
@@ -39,4 +43,40 @@ jobs:
       with:
         name: build-${{ matrix.node-version }}
         path: build/
+        retention-days: 7
+
+  validate-package:
+    runs-on: ubuntu-latest
+    needs: test
+    
+    steps:
+    - uses: actions/checkout@v4
+    
+    - name: Use Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '22.x'
+        registry-url: 'https://registry.npmjs.org'
+        cache: 'npm'
+    
+    - name: Install dependencies
+      run: npm ci
+    
+    - name: Build project
+      run: npm run build
+    
+    - name: Pack package
+      run: npm pack
+    
+    - name: List package contents
+      run: tar -tvf *.tgz
+    
+    - name: Validate package with dry-run publish
+      run: npm publish --dry-run
+    
+    - name: Upload package artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: npm-package
+        path: "*.tgz"
         retention-days: 7
