--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -105,6 +105,7 @@ jobs:
     - name: Create GitHub Release
       uses: softprops/action-gh-release@v2
       with:
+        tag_name: "v${{ env.VERSION }}"
         name: "v${{ env.VERSION }}"
         body: |
           ## @nitish-raj/searxng-mcp-bridge v${{ env.VERSION }}
