--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -35,10 +35,18 @@ jobs:
         run: npm ci
 
       - name: Bump version
+        id: bump_version
         run: |
           npm version minor -m "chore(release): %s"
+          echo "tag=$(git describe --tags --abbrev=0)" >> $GITHUB_OUTPUT
 
       - name: Push new version and tag
         run: |
           git push origin master
           git push origin --tags
+
+      - name: Call Release Workflow
+        uses: ./.github/workflows/release.yml@master
+        with:
+          tag: ${{ steps.bump_version.outputs.tag }}
+        secrets: inherit
