--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Bump version
         id: bump_version
         run: |
-          npm version minor -m "chore(release): %s"
+          npm version patch -m "chore(release): %s"
           echo "tag=$(git describe --tags --abbrev=0)" >> $GITHUB_OUTPUT
 
       - name: Push new version and tag
