--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -69,16 +69,14 @@ jobs:
     - name: Extract and Validate Version
       id: extract_version
       run: |
-        if [[ "${{ github.event_name }}" == "release" ]]; then
+        if [[ -n "${{ inputs.tag }}" ]]; then
+          VERSION_TAG="${{ inputs.tag }}"
+        elif [[ "${{ github.event_name }}" == "release" ]]; then
           VERSION_TAG="${{ github.event.release.tag_name }}"
-        elif [[ "${{ github.event_name }}" == "workflow_call" ]]; then
-          VERSION_TAG="${{ github.event.inputs.tag }}"
-        elif [[ "${{ github.event_name }}" == "workflow_dispatch" ]]; then
-          VERSION_TAG="${{ github.event.inputs.tag }}"
         elif [[ "${{ github.event_name }}" == "push" ]]; then
           VERSION_TAG="${{ github.ref_name }}"
         else
-          echo "::error::Unsupported event type: ${{ github.event_name }}"
+          echo "::error::Unsupported event type or missing tag for event: ${{ github.event_name }}"
           exit 1
         fi
 
