--- a/smithery.yaml
+++ b/smithery.yaml
@@ -18,6 +18,12 @@ startCommand:
         # No default value - this URL is mandatory.
         description: |
           Required: The full URL of the SearxNG instance the bridge should connect to.
+      transport:
+        type: string
+        enum: ["stdio", "http"]
+        default: "stdio"
+        description: |
+          Optional: The transport protocol to use (stdio or http).
   commandFunction:
     # A JS function that produces the CLI command based on the given config to start the MCP on stdio.
     |-
@@ -25,7 +31,8 @@ startCommand:
       command: 'node',
       args: ['/app/build/index.js'],
       env: {
-        SEARXNG_INSTANCE_URL: config.searxngInstanceUrl
+        SEARXNG_INSTANCE_URL: config.searxngInstanceUrl,
+        TRANSPORT: config.transport || 'stdio'
       }
     })
   exampleConfig:
