feat: Enhance HTTP transport support and configuration
- Updated GitHub Actions workflow to trigger on any merged pull request.
- Added new HTTP and Dev modes to AGENTS.md for server operation.
- Changed Dockerfile to expose port 8081 for HTTP transport compatibility.
- Updated README.md to reflect new HTTP transport features and usage instructions.
- Modified package.json and package-lock.json to include new dependencies for HTTP support.
- Updated Smithery configuration to set HTTP as the default transport type.
- Refactored index.ts to implement enhanced error handling and logging for HTTP requests.
- Improved CORS configuration and added session management for HTTP transport.
- Added health check and session management endpoints for better server monitoring.

--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -8,8 +8,7 @@ on:
 jobs:
   bump_version:
     if: |
-      github.event.pull_request.merged == true &&
-      github.actor == 'renovate[bot]'
+      github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     permissions:
       contents: write
