--- a/smithery.yaml
+++ b/smithery.yaml
@@ -1,12 +1,16 @@
 # Smithery configuration file: https://smithery.ai/docs/config#smitheryyaml
-# Smithery configuration file: https://smithery.ai/docs/config#smitheryyaml
 description: |
   An MCP server that acts as a bridge to a SearxNG instance.
   Allows compatible clients (like Roo) to perform searches using a configured SearxNG instance.
   Requires the `searxngInstanceUrl` configuration to be set.
 
+runtime: "container"
+build:
+  dockerfile: "Dockerfile"
+  dockerBuildPath: "."
+
 startCommand:
-  type: stdio
+  type: "http"
   configSchema:
     # JSON Schema defining the configuration options for the MCP.
     type: object
@@ -18,23 +22,6 @@ startCommand:
         # No default value - this URL is mandatory.
         description: |
           Required: The full URL of the SearxNG instance the bridge should connect to.
-      transport:
-        type: string
-        enum: ["stdio", "http"]
-        default: "stdio"
-        description: |
-          Optional: The transport protocol to use (stdio or http).
-  commandFunction:
-    # A JS function that produces the CLI command based on the given config to start the MCP on stdio.
-    |-
-    (config) => ({
-      command: 'node',
-      args: ['/app/build/index.js'],
-      env: {
-        SEARXNG_INSTANCE_URL: config.searxngInstanceUrl,
-        TRANSPORT: config.transport || 'stdio'
-      }
-    })
   exampleConfig:
     # Replace with the actual URL of your SearxNG instance
     searxngInstanceUrl: "YOUR_SEARXNG_INSTANCE_URL"
