--- a/package.json
+++ b/package.json
@@ -27,7 +27,11 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "1.18.1",
-    "axios": "^1.8.4"
+    "@nitish-raj/searxng-mcp-bridge": "^0.9.15",
+    "axios": "^1.8.4",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "express-rate-limit": "^7.5.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
