--- a/smithery.yaml
+++ b/smithery.yaml
@@ -1,7 +1,7 @@
 # Smithery configuration file: https://smithery.ai/docs/config#smitheryyaml
 description: |
   An MCP server that acts as a bridge to a SearxNG instance.
-  Allows compatible clients (like Roo) to perform searches using a configured SearxNG instance.
+  Allows compatible clients (like Claude, Cursor) to perform searches using a configured SearxNG instance.
   Requires the `searxngInstanceUrl` configuration to be set.
 
 runtime: "container"
@@ -19,9 +19,12 @@ startCommand:
     properties:
       searxngInstanceUrl:
         type: string
+        format: uri
         # No default value - this URL is mandatory.
         description: |
-          Required: The full URL of the SearxNG instance the bridge should connect to.
+          Required: The full URL of the SearxNG instance the bridge should connect to (e.g., https://searxng.example.com).
+        # Map this config to the SEARXNG_INSTANCE_URL environment variable
+        env: "SEARXNG_INSTANCE_URL"
   exampleConfig:
     # Replace with the actual URL of your SearxNG instance
-    searxngInstanceUrl: "YOUR_SEARXNG_INSTANCE_URL"
+    searxngInstanceUrl: "https://searxng.example.com"
