Update npm publish command in release workflow
Removed the '--provenance --access public' options from npm publish command.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -104,7 +104,7 @@ jobs:
         echo "✅ Version consistency check passed"
     
     - name: Publish to npm with provenance
-      run: npm publish --provenance --access public
+      run: npm publish
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
     
