--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -104,9 +104,7 @@ jobs:
         echo "✅ Version consistency check passed"
     
     - name: Publish to npm with provenance
-      run: npm publish
-      env:
-        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+      run: npm publish --provenance
     
     - name: Create GitHub Release
       uses: softprops/action-gh-release@v2
