--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,15 +4,6 @@ on:
   push:
     tags:
       - 'v*'
-  release:
-    types: [published]
-  
-  workflow_call:
-    inputs:
-      tag:
-        description: 'The tag to release (e.g., v1.2.3)'
-        required: true
-        type: string
         
 permissions:
   contents: write
@@ -30,7 +21,7 @@ jobs:
     steps:
     - uses: actions/checkout@v6
       with:
-        ref: ${{ inputs.tag || github.ref }}
+        ref: ${{ github.ref }}
     
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v6
@@ -55,7 +46,7 @@ jobs:
     steps:
     - uses: actions/checkout@v6
       with:
-        ref: ${{ inputs.tag || github.ref }}
+        ref: ${{ github.ref }}
     
     - name: Use Node.js
       uses: actions/setup-node@v6
@@ -63,6 +54,9 @@ jobs:
         node-version: '22.x'
         registry-url: 'https://registry.npmjs.org'
         cache: 'npm'
+
+    - name: Update npm
+      run: npm i -g npm@11.5.1
     
     - name: Install dependencies
       run: npm ci
@@ -73,14 +67,10 @@ jobs:
     - name: Extract and Validate Version
       id: extract_version
       run: |
-        if [[ -n "${{ inputs.tag }}" ]]; then
-          VERSION_TAG="${{ inputs.tag }}"
-        elif [[ "${{ github.event_name }}" == "release" ]]; then
-          VERSION_TAG="${{ github.event.release.tag_name }}"
-        elif [[ "${{ github.event_name }}" == "push" ]]; then
+        if [[ "${{ github.event_name }}" == "push" ]]; then
           VERSION_TAG="${{ github.ref_name }}"
         else
-          echo "::error::Unsupported event type or missing tag for event: ${{ github.event_name }}"
+          echo "::error::Unsupported event type for release workflow: ${{ github.event_name }}"
           exit 1
         fi
 
@@ -104,7 +94,7 @@ jobs:
         echo "✅ Version consistency check passed"
     
     - name: Publish to npm with provenance
-      run: npm publish --provenance
+      run: npm publish
     
     - name: Create GitHub Release
       uses: softprops/action-gh-release@v2
