--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": false,
   "type": "module",
   "bin": {
-    "mcp-searxng-bridge": "./build/index.js"
+    "mcp-searxng-bridge": "build/index.js"
   },
   "files": [
     "build",
